adding logo to the main-job.ipynb

--- a/main_job.ipynb
+++ b/main_job.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![RFCAN](logo.png \"RFCAN_LOGO\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
