--- a/raysum_lab.ipynb
+++ b/raysum_lab.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyraysum'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_9808\\2456770760.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mpyraysum\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mprs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mGeometry\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mModel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mControl\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mobspy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyraysum'"
+     ]
+    }
+   ],
    "source": [
     "from pyraysum import prs, Geometry, Model, Control\n",
     "import obspy as op\n"
@@ -126,6 +138,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3e9f97e7105d48c7b66a809e02144207",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=5.0, description='depth', max=10.0), Output()), _dom_classes=('widget-…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plot_map(depth)>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from ipywidgets import interact, widgets\n",
+    "\n",
+    "# Define a function that takes a parameter and plots something\n",
+    "def plot_map(depth):\n",
+    "    x = np.linspace(0, 10, 100)\n",
+    "    y = np.linspace(0, 10, 100)\n",
+    "    z = np.linspace(0, 10, 100)\n",
+    "    m = np.sqrt(x**2 + y**2 + z**2)\n",
+    "    # plt.imshow(m < depth)\n",
+    "    # plt.colorbar()\n",
+    "    # plt.show()\n",
+    "    \n",
+    "# Create an interactive widget to change the parameter\n",
+    "interact(plot_map, depth=widgets.FloatSlider(min=0, max=10, step=0.1, value=5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e835faac3414e1d987441dff6827f9f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=50, description='n', min=10, step=10), FloatSlider(value=5.0, descriptio…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.visualize(n, parameter)>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def f(n, parameter):\n",
+    "    x = np.linspace(0, 10, n)\n",
+    "    y = np.linspace(0, 10, n)\n",
+    "    z = np.linspace(0, parameter, n)\n",
+    "    xx, yy, zz = np.meshgrid(x, y, z)\n",
+    "    m = np.sqrt(xx**1 + yy**2 + zz**2 + 20*np.random.rand(*xx.shape))\n",
+    "    # Plot\n",
+    "    fig = plt.figure(figsize=(8, 6))\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "    sc = ax.scatter(xx, yy, zz, c=m, cmap='viridis', s=5)\n",
+    "    plt.show()\n",
+    "\n",
+    "def visualize(n, parameter):\n",
+    "    f(n, parameter)\n",
+    "    \n",
+    "#pywidgets\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact\n",
+    "interact(visualize, n=widgets.IntSlider(min=10, max=100, step=10, value=50), parameter=widgets.FloatSlider(min=1, max=10, step=1, value=5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -148,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
