--- a/main_job.ipynb
+++ b/main_job.ipynb
@@ -592,7 +592,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "rfman",
    "language": "python",
    "name": "python3"
   },
